--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "description": "Cronjobs for the Crownstone Cloud",
   "main": "index.js",
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "luxon": "^1.3.3",
+    "mongodb": "3.1.1",
+    "node-fetch": "^2.2.0"
+  }
 }
