--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "le_node": "^1.7.1",
     "luxon": "^1.3.3",
     "mongodb": "3.1.1",
     "node-fetch": "^2.2.0"
