--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "le_node": "^1.7.1",
     "luxon": "^1.3.3",
     "mongodb": "3.1.1",
-    "node-fetch": "^2.2.0"
+    "node-fetch": "^2.2.0",
+    "crownstone-cloud": "^0.25.5",
+    "crownstone-sse": "^4.2.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
   }
 }
