--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "le_node": "^1.7.1",
     "luxon": "^1.3.3",
-    "mongodb": "3.1.1",
+    "mongodb": "^4.1.0",
     "node-fetch": "^2.2.0",
     "crownstone-cloud": "^0.25.5",
     "crownstone-sse": "^4.2.1",
